Add Stripe payment integration and payment workflow improvements
- Added Stripe payment integration with StripeService and PaymentController
- Implemented Stripe Checkout Sessions for secure payment processing
- Added webhook handler for payment status updates
- Added Stripe CLI installation scripts and documentation
- Configured payment workflow: admin approval required before payment
- Blocked admin accounts from making payments
- Implemented automatic cancellation of other requests when admin approves one
- Payment button only appears for approved viewing requests
- Added currency configuration support (USD/AED)
- Created comprehensive Stripe setup documentation (local testing and production)
- Added payment success page and error handling
- Integrated payment status tracking in database

--- a/DubiRent-Asp.net/DubiRent/DubiRent/appsettings.example.json
+++ b/DubiRent-Asp.net/DubiRent/DubiRent/appsettings.example.json
@@ -26,6 +26,11 @@
     "SmtpPassword": "YOUR_APP_PASSWORD",
     "FromEmail": "YOUR_EMAIL@gmail.com",
     "FromName": "DubiRent"
+  },
+  "Stripe": {
+    "PublishableKey": "pk_test_YOUR_PUBLISHABLE_KEY",
+    "SecretKey": "sk_test_YOUR_SECRET_KEY",
+    "WebhookSecret": "whsec_YOUR_WEBHOOK_SECRET",
+    "Currency": "usd"
   }
 }
-
