--- a/DubiRent-Asp.net/DubiRent/DubiRent/DubiRent.csproj
+++ b/DubiRent-Asp.net/DubiRent/DubiRent/DubiRent.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+    <PackageReference Include="Stripe.net" Version="45.7.0" />
   </ItemGroup>
 
 </Project>
